fix spacing issues on wrapped form labels

--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -23,7 +23,7 @@
 
   input,
   textarea {
-    @apply border border-gray-900 px-4 py-2;
+    @apply border border-gray-900 px-4 py-2 leading-normal;
   }
 
   %relative,
@@ -47,7 +47,7 @@
   }
 
   .form-label {
-    @apply relative col-span-2;
+    @apply relative col-span-2 leading-[0];
   }
 
   .form-label__text {
